# metapower_service_icp

./: Cargo.toml  cross-compile-linux.sh  deploy_service_to_cloud.sh  identity.pem  python-mqtt.python
battery/: Cargo.toml
battery/src/: main.rs
battery/src/id/: identity.rs  mod.rs
battery/src/mqtt/: mod.rs  publish.rs  subscriber.rs
battery/src/reverie/: memory.rs
battery/src/runner/: mod.rs
docs/: Readme.md  part1-ai助手.md  part2-AI-Agent.md  part3-AI-Social.md
framework/: Cargo.toml  build.rs
framework/src/: lib.rs
framework/src/chatbot/: gemini.rs  mod.rs  openai.rs
framework/src/dao/: crawler.rs  sqlite.rs
framework/src/icp/: mod.rs
framework/src/model/: memcache.rs  mod.rs
framework/src/service/: llmchat.rs  llmchat_model.rs  metapowermatrix_agent.rs  metapowermatrix_agent_mod.rs  metapowermatrix_battery.rs  metapowermatrix_battery_mod.rs  metapowermatrix_controller.rs  metapowermatrix_controller_mod.rs  mod.rs
portal/: Cargo.toml
portal/src/: main.rs
portal/src/dao/: db_interface.rs  mod.rs  pqsql.rs
portal/src/model/: battery.rs  mod.rs
portal/src/service/: ai_town.rs  bsc_proxy.rs  llm_proxy.rs  mod.rs
protos/: agent.proto  battery.proto  llm.proto  matrix.proto
stream/: Cargo.toml
stream/src/: main.rs
template/: action.json  hwchase17-react.yml  map.json  map_classified.json  openai-tools.yml  tags.json
template/personas/Isabella Rodriguez/bootstrap_memory/associative_memory/: kw_strength.json
template/personas/Maria Lopez/bootstrap_memory/: spatial_memory.json
template/plan/: agent_chat_architecture.txt  agent_chat_follower.txt  agent_chat_history.txt  agent_chat_maker.txt  agent_chat_pro.txt  create_conversation_pro.txt  create_conversation_v2.txt  daily_target.txt  decide_to_talk_v2.txt  generate_panorama_prompt.txt  iterative_convo_pro.txt  iterative_convo_topic.txt  iterative_live_convo_v1.txt
