[package]
name = "metapower_framework"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
tonic = "0.12.2"
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
prost = "0.13.3"
chrono = "0.4.38"
memcache = "0.17.2"
anyhow = "1.0.89"
rusqlite = "0.32.1"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
daemonize = "0.5.0"
paho-mqtt = { git = "https://github.com/eclipse/paho.mqtt.rust.git", branch = "master" }
reqwest = { version = "0.12.7", features = ["json"] }
tokio-util = { version = "0.7.12", features = ["io"] }
futures-util = "0.3.30"
futures = "0.3.30"
candid = "0.10.10"
sha1 = "0.10.6"
ic-agent = "0.38.0"
ring = "0.17.8"
md-5 = "0.10.5"

[build-dependencies]
tonic-build = "0.12.2"