[package]
name = "metapower_portal_icp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metapower_portal_icp"
path = "src/main.rs"


[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.6.1"
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.2.0"
serde_json = "1.0.79"
metapower_framework = { path = "../framework" }
actix-files = "0.6.5"
tonic = "0.11.0"
time = "0.3.36"
md5 = "0.7.0"
anyhow = "1.0.38"
postgres = "0.19.5"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
ahash = "0.8.8"
futures-util = "0.3.30"
futures = "0.3.30"
sha1 = "0.10.0"
ic-agent = "0.37.1"
ring = "0.17.8"
candid = "0.10"

[build-dependencies]
