[package]
name = "metapower_portal_icp"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metapower_portal_icp"
path = "src/main.rs"


[dependencies]
actix = "0.13.5"
actix-web = "4.9.0"
actix-cors = "0.7.0"
actix-multipart = "0.7.2"
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
metapower_framework = { path = "../framework" }
actix-files = "0.6.6"
tonic = "0.12.2"
time = "0.3.36"
md5 = "0.7.0"
anyhow = "1.0.89"
postgres = "0.19.9"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
ahash = "0.8.11"
futures-util = "0.3.30"
futures = "0.3.30"
sha1 = "0.10.6"
ic-agent = "0.38.0"
ring = "0.17.8"
candid = "0.10.10"
ethers = { version = "2.0.14", features = ["abigen", "ws"] }
dotenv = "0.15.0"
tokio = { version = "1.40.0", features = ["full"] }

[build-dependencies]
