[package]
name = "metapower_streaming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metapower_streaming"
path = "src/main.rs"


[dependencies]
serde = "1.0.111"
serde_cbor = "0.11"
serde_bytes = "0.11"
serde_with = "3.2.0"
serde_json = "1.0.79"
metapower_framework = { path = "../framework" }
tonic = "0.11.0"
futures-util = "0.3.30"
futures = "0.3.30"
uuid = { version = "1.0.0", features = ["serde", "v4"] }
tokio = { version = "1.20", features = ["macros", "rt-multi-thread"] }
hound = "3.5.1"
warp = "0.3"
bytes = "1"
ffmpeg-next = "6.1.1"
tempfile = "3.10.1"
bytemuck = "1.7.0"
anyhow = "1.0.38"


[build-dependencies]
