[package]
name = "metapower_streaming"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "metapower_streaming"
path = "src/main.rs"


[dependencies]
serde = "1.0.210"
serde_cbor = "0.11.2"
serde_bytes = "0.11.15"
serde_with = "3.9.0"
serde_json = "1.0.128"
metapower_framework = { path = "../framework" }
tonic = "0.12.2"
futures-util = "0.3.30"
futures = "0.3.30"
uuid = { version = "1.10.0", features = ["serde", "v4"] }
tokio = { version = "1.40.0", features = ["macros", "rt-multi-thread"] }
hound = "3.5.1"
warp = "0.3.7"
bytes = "1.7.2"
ffmpeg-next = "7.0.4"
tempfile = "3.12.0"
bytemuck = "1.18.0"
anyhow = "1.0.89"


[build-dependencies]
